crates/kwokka-macros/tests/ui/unknown.rs
#[kwokka::main(fearless)]
async fn main() {}
